# smriti-mcp

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
src/smriti_mcp/: fix_frontmatter.py  server.py  store.py
tests/: test_smriti_mcp_server.py  test_smriti_store.py
